@@ -1,3 +1,8 @@
+2006-03-15  Assaf Gordon  <agordon88@gmail.com>
+
+	* src/gnome-cmd-search-dialog.c:
+	This should fix bug #171051.
+
 2006-03-10  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/libgviewer/viewer-widget.c:
